fix(styles): adding trailing 0 in CSS properties.
Fixes some cross-browser differences

--- a/src/x-slider.css
+++ b/src/x-slider.css
@@ -18,8 +18,8 @@
   --x-slider-slide-min-height: 0px;
   --x-slider-slide-max-height: none;
 
-  --x-slider-transition-duration: .6s;
-  --x-slider-transition-timing-function: cubic-bezier(.25, .46, .45, .94);
+  --x-slider-transition-duration: 0.6s;
+  --x-slider-transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
 
   --x-slider-navigation-color: #000;
   --x-slider-navigation-color-focus: var(--x-slider-navigation-color);
