--- a/src/x-slider/x-slider.css
+++ b/src/x-slider/x-slider.css
@@ -33,6 +33,8 @@
   --x-slider-pagination-color-selected: #000;
   --x-slider-pagination-size-clickable: 24px;
   --x-slider-pagination-size-dot: 8px;
+  --x-slider-pagination-border: 1px solid var(--x-slider-pagination-color);
+  --x-slider-pagination-border-selected: 1px solid var(--x-slider-pagination-color-selected);
   --x-slider-pagination-gap: 2px;
   --x-slider-pagination-height: 44px;
 
