GH-7 feat(perf): remove pointer-down attribute

--- a/src/macro-carousel/macro-carousel.css
+++ b/src/macro-carousel/macro-carousel.css
@@ -72,12 +72,11 @@
   cursor: grab;
 }
 
-:host([pointer-down]) #externalWrapper {
+#externalWrapper:active {
   cursor: grabbing;
 }
 
-:host([disable-drag]) #externalWrapper,
-:host([disable-drag][pointer-down]) #externalWrapper {
+:host([disable-drag]) #externalWrapper {
   cursor: default;
 }
 
